Integrate change 271914 from ZDESKTOP-700        bug: 51939
       Apply tags on sync. Place document in correct folder on sync. Avoid
       pushing new revision if content is unchanged. Avoid deleting
       eixsting document when syncing new revisions unless document type
       has changed.

http://bugzilla.zimbra.com/show_bug.cgi?id=51939